# wpm

./: .gitignore  Cargo.toml  README.md  Session.vim  dict.txt
src/: main.rs
src/app/: mod.rs  view.rs
