[package]
name = "wpm"
version = "0.1.0"
authors = ["Jayden Dumouchel <jdumouch@ualberta.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19"
tui = { version = "0.14", default-features = false, features = ['crossterm'] }
rand = "0.8"
